--- a/src/MainPart/MainPart.module.css
+++ b/src/MainPart/MainPart.module.css
@@ -1,3 +1,18 @@
+button.distanceChooser{
+    background:none; 
+    border:none;
+    margin: 0;
+    padding: 0;
+
+    font-family: 'Helvetica';
+    font-style: normal;
+    font-size: 16px;
+    line-height: 20px;
+
+    text-decoration: underline;
+    cursor: pointer;
+}
+
 .showDangerousOnly{
     display: block;
 }
@@ -13,13 +28,17 @@
 
     font-family: 'Helvetica';
     font-style: normal;
-    font-weight: 400;
     font-size: 16px;
     line-height: 20px;
     /* identical to box height, or 125% */
 
 
     color: #000000;
+}
+
+button.activeMode{
+    font-weight: bold;
+    text-decoration: none;
 }
 
 @media(max-width:920px){
@@ -29,8 +48,8 @@
         position: relative;
         width: 212px;
         height: 48px;
-        left: 13px;
-        top: 228px;
+        left: 0px;
+        top: 10px;
 
         font-family: 'Helvetica';
         font-style: normal;
